--- a/Lab7/blog/style.css
+++ b/Lab7/blog/style.css
@@ -3,7 +3,10 @@
   padding: 0;
 }
 body {
+  min-height: 100vh;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 header {
   display: flex;
@@ -26,7 +29,7 @@ nav a:hover {
 main {
   padding: 0 10% 20px 10%;
   background-color: #f5f7fb;
-  height: 100%;
+  flex: 1 1 auto;
 }
 #filter-toolbar {
   display: flex;
